v1.2.0: Fix text overflow in sidebar and live code preview

--- a/src/components/Layout/Accordion/accordion.module.scss
+++ b/src/components/Layout/Accordion/accordion.module.scss
@@ -17,9 +17,6 @@
 			.link {
 				font-size: 1rem;
 			}
-			.label {
-				flex-shrink: 0;
-			}
 			.button {
 				flex-grow: 1;
 				display: flex;
