--- a/src/components/Playground/playground.module.scss
+++ b/src/components/Playground/playground.module.scss
@@ -13,6 +13,9 @@
 		display: flex;
 		align-items: center;
 	}
+	.preview {
+		white-space: pre-wrap;
+	}
 	.title {
 		margin: 0;
 	}
